[workspace]
members = ["smicro-macros"]
resolver = "2"

[package]
name = "smicro"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
nom = "7.1.3"
num_enum = "0.7.0"
syslog = "6.1.0"
thiserror = "1.0.50"
smicro-macros = { path = "smicro-macros" }
chrono = "0.4.31"
libc = "0.2.149"

[profile.release]
debug = true
