[workspace]
members = ["smicro-macros", "smicro-binhelper", "smicro-types", "smicro-sshd", "smicro-common"]
resolver = "2"

[profile.release]
debug = true

[patch.crates-io]
p521 = { git = 'https://github.com/RustCrypto/elliptic-curves.git', branch = 'master' }
mio = { git = 'https://github.com/tokio-rs/mio.git', branch = 'master' }
